kubernetes/apps/rook-ceph/core/core.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: rook-ceph-rgw-from-caddy-ext
  namespace: rook-ceph
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ceph-rgw
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: caddy-ext
      ports:
        - port: 8080
          protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: rook-ceph-rgw-from-caddy-int
  namespace: rook-ceph
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ceph-rgw
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: caddy-int
      ports:
        - port: 8080
          protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: rook-ceph-mgr-from-caddy-int
  namespace: rook-ceph
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ceph-mgr
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: caddy-int
      ports:
        - port: 7000
          protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: intra-namespace-rook-ceph
  namespace: &app rook-ceph
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: *app
